--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="propic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Ms.R.KEERTHANA</h1>
             <p>STUDENT</p>
         </div>
